plugins {
    id 'java'
}

group 'com.interface21'
version '1.0-SNAPSHOT'

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

repositories {
    mavenCentral()
}

dependencies {
    implementation project(':jdbc')

    implementation 'org.reflections:reflections:0.10.2'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.1'
    implementation 'ch.qos.logback:logback-classic:1.5.6'
    implementation 'org.apache.commons:commons-lang3:3.14.0'
    implementation 'cglib:cglib:3.3.0'

    testImplementation 'org.assertj:assertj-core:3.26.0'
    testImplementation 'org.mockito:mockito-core:5.12.0'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.2'
    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.10.2'
}

test {
    useJUnitPlatform()
    jvmArgs '--add-opens', 'java.base/java.lang=ALL-UNNAMED'
}

compileJava {
    options.compilerArgs << '-parameters'
}
